text align center was fixed in sideBar widjet

--- a/src/index.css
+++ b/src/index.css
@@ -232,37 +232,22 @@ legend {
   grid-template-columns: 460px 1fr;
 }
 
-/* .widget {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  height: 100vh;
-  max-width: 460px; */
-  /* min-width: 375px; */
-  /* flex: 0 1 39.45%;
-  min-width: 320px;
-  
-	background: #eee;
-	background: linear-gradient(240deg, rgba(0, 0, 200, 0), rgba(150, 50, 50, 0.3)   ); */
-  /* min-height: 667px; */
-  /* position: sticky;
-  top: 0;
-} */
-.widget {
+ .widget {
   display: grid;
   grid-template-columns: 1fr;
+  grid-auto-flow: row;
   justify-content: space-between;
   justify-items: center;
+  justify-items: center;
   align-content: space-evenly;
-  height: 100vh;
   max-width: 460px;
   min-width: 320px;
 	background: #eee;
 	background: linear-gradient(240deg, rgba(0, 0, 200, 0), rgba(150, 50, 50, 0.3)   );
-  /* min-height: 667px; */
+  min-height: 667px; 
   position: sticky;
-  top: 0;
-}
+  padding: 30px;
+} 
 
 .button {
   font-weight: bold;
@@ -280,8 +265,8 @@ legend {
 }
 
 .widget__icon {
-  width: 150px;
-  height: 150px;
+  width: 120px;
+  height: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -365,13 +350,18 @@ legend {
 }
 
 .widget__body {
-  width: 100%;
-  display: flex;
-  align-self: flex-end;
-  flex-direction: column;
+  /* width: 100%;
+   */
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+  justify-items: center;
+  justify-content: center;
+  align-content: center;
   align-items: center;
-  margin-bottom: 35px;
-  margin-top: -20px;
+  /* align-self: flex-end; */
+  /* margin-bottom: 35px;
+  margin-top: -20px; */
 }
 
 .widget-body__temp {
@@ -402,37 +392,39 @@ legend {
 .widget-body__feels-like {
   font-size: 18px;
   line-height: 21px;
-  margin-bottom: 78px;
+  margin-bottom: 20px;
 }
 
 .widget-body__date {
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  align-content: center;
   font-size: 18px;
   line-height: 21px;
-  display: grid;
   grid-template-columns: 1fr;
+  grid-auto-flow: row;
   margin-bottom: 25px;
-  /* justify-items: center; */
+  
 }
-
-.date__text {
-  margin-right: 103px;
-}
-
-.date__info {}
 
 .widget-body__geo {
+  display: grid;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
   font-size: 25px;
   line-height: 21px;
   
 }
 
 .geo__icon {
-  /* display: flex;
+  display: grid;
   justify-content: center;
-  align-items: center; */
+  justify-items: center;
+  align-items: center;
   width: 60px;
   height: 60px;
-  margin-right: 12px;
 }
 
 .geo_city{
@@ -442,10 +434,8 @@ legend {
 
 .main {
   display: flex;
-  flex: 1;
-  width: 100%;
   justify-content: center;
-  align-content: center;
+  align-items: center;
 }
 
 .main__container {
@@ -467,6 +457,25 @@ legend {
   justify-content: space-between;
   margin-bottom: 25px;
   flex-wrap: wrap;
+}
+.regulateMetrics{
+  display: grid;
+  column-gap: 10px;
+  grid-template-columns: 1 fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  font-size: 20px;
+}
+.metrics{
+  width: 20px;
+  padding: 5px;
+  border: none;
+  outline: none;
+  box-sizing: border-box;
+  border-radius: 10px;
+  font-weight: 500;
+  font-size: 18px;
+  /* padding: 12px 12px 13px 42px; */
+  width: 100%;
 }
 
 .forecast-header__title {
@@ -790,7 +799,7 @@ legend {
   }
 
   .main {
-    padding: 50px 30px 30px;
+    /* padding: 50px 30px 30px; */
   }
 
   .main-datails__header {
